Updated the Settings page so that users can update their email and change their password. To fix: Users can upload some larger images to firebase but the app still crashes often enough due to an out of memory error. Also, the images should be saved with better quality. The app also sometimes crashes when images from the gallery are loaded to be displayed.

--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/relLayout_gridview"
             android:layout_below="@+id/relLayout1"
-            android:layout_marginBottom="55dp">
+            android:layout_marginBottom="100dp">
 
             <GridView
                 android:layout_width="match_parent"
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="54dp">
+            android:layout_marginBottom="@dimen/bottom_nav_height">
 
             <include layout="@layout/layout_explore_userinfo" />
 
