--- a/app/src/main/res/layout/dialog_confirm_password.xml
+++ b/app/src/main/res/layout/dialog_confirm_password.xml
@@ -2,58 +2,93 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="350dp"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:layout_centerInParent="true"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Confirm Password"
-        android:textSize="21sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:id="@+id/dialogTitle"
-        />
-
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="password"
-        android:id="@+id/confirm_password"
-        android:inputType="textPassword"
-        android:textSize="20sp"
-        />
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:padding="10dp"
+        android:orientation="vertical"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text=""
+            android:textSize="@dimen/heading2"
+            android:textStyle="bold"
             android:textColor="@color/black"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            android:text="CANCEL"
+            android:id="@+id/dialogChangeTitle"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/body"
+            android:textColor="@color/black"
+            android:id="@+id/dialogChangeValue"
+            android:layout_marginBottom="30dp"
+            android:text="email"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirm Password"
+            android:textSize="@dimen/heading2"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/string_password"
+            android:id="@+id/confirm_password"
+            android:inputType="textPassword"
+            android:textSize="@dimen/pre_body"
+            />
+
+    </LinearLayout>
+
+    <!-- Cancel and done buttons -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <!--cancel-->
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:textSize="@dimen/heading3"
+            android:textColor="@color/primary_green"
+            android:text="@string/string_cancel"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:background="@drawable/button_rectangle_white"
             android:id="@+id/dialogCancel"
             />
 
+        <!--done-->
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            android:text="CONFIRM"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:textSize="@dimen/heading3"
+            android:textColor="@color/white"
+            android:text="@string/string_confirm"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:background="@drawable/button_rectangle_eden"
             android:id="@+id/dialogConfirm"
             />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
