--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/relLayout1"
-                android:layout_marginBottom="54dp"
+                android:layout_marginBottom="@dimen/bottom_nav_height"
                 android:id="@+id/relLayout2">
 
                 <ListView
