--- a/app/src/main/res/layout/activity_private_chat.xml
+++ b/app/src/main/res/layout/activity_private_chat.xml
@@ -24,6 +24,7 @@
         android:id="@+id/relLayout2"
         android:background="@color/white">
 
+        <!--list of messages-->
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -33,14 +34,15 @@
             android:layout_alignParentLeft="true"
             android:dividerHeight="16dp"
             android:divider="@android:color/transparent"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="@dimen/drawing_space_btn_height"
             >
 
         </ListView>
 
+        <!--drawing space button-->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="@dimen/drawing_space_btn_height"
             android:id="@+id/btn_drawingSpace"
             android:background="@color/primary_green"
             android:layout_alignParentBottom="true">
@@ -62,7 +64,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Drawing Space"
+                    android:text="@string/string_drawing_space"
                     android:textSize="25sp"
                     android:textColor="@color/white"
                     />
