--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -8,9 +8,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:textSize="30sp"
+        android:textSize="@dimen/heading1"
         android:text="@string/string_open_camera"
         android:padding="20dp"
+        android:paddingStart="40dp"
+        android:paddingLeft="40dp"
+        android:paddingEnd="40dp"
+        android:paddingRight="40dp"
         android:background="@drawable/button_white_rounded"
         android:id="@+id/btnLaunchCamera"
         android:layout_centerInParent="true"/>
