--- a/app/src/main/res/layout/snippet_center_editprofile.xml
+++ b/app/src/main/res/layout/snippet_center_editprofile.xml
@@ -4,19 +4,20 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:padding="20dp">
+            android:padding="25dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:id="@+id/profile_photo"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 app:civ_border_color="@color/grey"
                 app:civ_border_width="2dp"
                 android:layout_centerHorizontal="true"
@@ -30,166 +31,87 @@
                 android:layout_below="@+id/profile_photo"
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/link_blue"
-                android:textSize="16sp"
+                android:textSize="@dimen/body"
+                android:layout_marginTop="2dp"
                 />
 
-            <!-- name section -->
-            <RelativeLayout
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_below="@+id/profile_photo"
-                android:layout_marginTop="80dp"
-                android:background="@drawable/border_bottom_grey"
-                android:id="@+id/relLayout1">
-                
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_age"
-                    android:layout_centerVertical="true" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/name"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:background="@null"
-                    android:inputType="textNoSuggestions"
-                    android:hint="name"/>
-
-            </RelativeLayout>
-
-            <!-- Age section -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_below="@+id/relLayout1"
-                android:background="@drawable/border_bottom_grey"
-                android:id="@+id/relLayout2">
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_age"
-                    android:layout_centerVertical="true" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/age"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:background="@null"
-                    android:inputType="textNoSuggestions"
-                    android:hint="age"/>
-
-            </RelativeLayout>
-
-            <!-- Location section -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_below="@+id/relLayout2"
-                android:background="@drawable/border_bottom_grey"
-                android:id="@+id/relLayout3">
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_location"
-                    android:layout_centerVertical="true" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/location"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:background="@null"
-                    android:inputType="textNoSuggestions"
-                    android:hint="location"/>
-
-            </RelativeLayout>
-
-            <!-- description section -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_below="@+id/relLayout3"
-                android:background="@drawable/border_bottom_grey"
-                android:id="@+id/relLayout4"
-                android:layout_marginTop="15dp">
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_description"
-                    android:layout_centerVertical="true" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/description"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:background="@null"
-                    android:inputType="textNoSuggestions"
-                    android:hint="description"/>
-
-            </RelativeLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Private Information"
-                android:layout_below="@+id/relLayout4"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp"
-                android:textColor="@color/black"
-                android:background="@drawable/border_bottom_grey"
-                android:id="@+id/textPrivateInfo"/>
+                android:layout_below="@+id/changeProfilePhoto"
+                android:layout_marginTop="30dp"
+                android:id="@+id/relLayout1"
+                android:orientation="vertical">
 
-            <!-- email section -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_below="@+id/textPrivateInfo"
-                android:background="@drawable/border_bottom_grey"
-                android:id="@+id/relLayout5"
-                android:layout_marginTop="15dp">
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_email"
-                    android:layout_centerVertical="true" />
-
-                <EditText
+                <!-- name section -->
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/email"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:background="@null"
-                    android:inputType="textNoSuggestions"
-                    android:hint="email"/>
+                    android:layout_marginBottom="10dp">
 
-            </RelativeLayout>
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/name"
+                        android:inputType="textNoSuggestions"
+                        android:hint="name"
+                        android:textSize="@dimen/body"/>
 
+                </android.support.design.widget.TextInputLayout>
+
+                <!--age-->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/age"
+                        android:inputType="number"
+                        android:hint="age"
+                        android:textSize="@dimen/body"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <!--location-->
+                <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/location"
+                        android:inputType="textNoSuggestions"
+                        android:hint="location"
+                        android:textSize="@dimen/body"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <!--description-->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/description"
+                        android:inputType="textMultiLine"
+                        android:maxLength="@integer/max_description_length"
+                        android:hint="description"
+                        android:textSize="@dimen/body"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
 
         </RelativeLayout>
-
-
-
-
-
 
     </ScrollView>
 
