--- a/app/src/main/res/layout/snippet_chatlist_rowview.xml
+++ b/app/src/main/res/layout/snippet_chatlist_rowview.xml
@@ -31,8 +31,7 @@
                 android:id="@+id/person_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:layout_centerVertical="true"
+                android:textSize="@dimen/pre_body"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:text="Lorem Ipsum"/>
@@ -40,13 +39,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/person_name"
                 android:id="@+id/timestamp"
                 android:textColor="@color/grey"
-                android:textSize="12sp"
+                android:textSize="@dimen/sub_body"
                 android:text="00-00-00"/>
-
-
 
         </LinearLayout>
 
