--- a/app/src/main/res/layout/snippet_drawinglist_rowview_.xml
+++ b/app/src/main/res/layout/snippet_drawinglist_rowview_.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/timestamp"
             android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/body"
             android:text="00-00-00"
             />
     </RelativeLayout>
