--- a/app/src/main/res/layout/snippet_top_editprofiletoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_editprofiletoolbar.xml
@@ -7,12 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/grey_border_bottom_white"
+        android:id="@+id/profileToolbar"
         >
-
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/profileToolbar">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -40,7 +36,7 @@
                     android:textColor="@color/black"
                     android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
-                    android:id="@+id/profileName"
+                    android:id="@+id/toolbarName"
                     />
 
                 <ImageView
@@ -52,17 +48,13 @@
                     android:layout_marginRight="20dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/saveChanges"
-                    android:src="@drawable/ic_checkmark"
+                    android:src="@drawable/ic_checkmark_green"
                     android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     />
 
 
             </RelativeLayout>
-
-
-
-        </android.support.v7.widget.Toolbar>
-
 
     </android.support.design.widget.AppBarLayout>
 
