--- a/app/src/main/res/layout/snippet_top_gallerytoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_gallerytoolbar.xml
@@ -14,14 +14,14 @@
             android:layout_height="match_parent"
             android:layout_marginRight="15dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp">
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp">
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginRight="25dp"
                 android:layout_centerVertical="true"
                 android:id="@+id/ivCloseShare"
                 android:src="@drawable/ic_x"
@@ -33,12 +33,14 @@
                 android:layout_toRightOf="@+id/ivCloseShare"
                 android:layout_toEndOf="@+id/ivCloseShare"
                 android:id="@+id/spinnerDirectory"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 android:textColor="@color/black"
-                android:text="Gallery"
                 android:layout_centerVertical="true"
-                android:gravity="center_vertical">
-
+                android:gravity="center_vertical"
+                android:background="@null"
+                android:layout_marginRight="50dp"
+                android:layout_marginEnd="60dp"
+                >
 
             </Spinner>
 
