--- a/app/src/main/res/layout/snippet_top_nexttoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_nexttoolbar.xml
@@ -14,14 +14,12 @@
             android:layout_height="match_parent"
             android:layout_marginRight="15dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp">
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp">
 
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:layout_centerVertical="true"
                 android:id="@+id/ivBackArrow"
                 android:src="@drawable/ic_backarrow"
@@ -33,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/string_upload"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="15dp"
+                android:layout_alignParentEnd="true"
                 android:textSize="20sp"
                 android:textColor="@color/link_blue"
                 android:layout_centerVertical="true"
