Made several improvements to the Upload page (compresses images differently based on their size). Added forgot password option on Login page. Images in the gallery and in the profile are displayed in reverse order. Added a new colour picker and brush opacity to the drawing space. Drawing space checks for permissions when a user tries to save a drawing to their Gallery. Any "age" inputs only accept integer values.

--- a/app/src/main/res/layout/activity_draw.xml
+++ b/app/src/main/res/layout/activity_draw.xml
@@ -40,17 +40,6 @@
                 android:layout_alignParentStart="true"
                 >
 
-                <!--new picture button-->
-                <ImageButton
-                    android:id="@+id/new_btn"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="5dp"
-                    android:padding="1dp"
-                    android:scaleType="fitCenter"
-                    android:background="@drawable/button_rounded_rectangle_eden"
-                    android:src="@drawable/ic_new" />
-
                 <!--save button-->
                 <ImageButton
                     android:id="@+id/save_btn"
@@ -81,6 +70,17 @@
                     android:background="@drawable/button_rounded_rectangle_eden"
                     android:src="@drawable/ic_eraser" />
 
+                <!--brush colour button-->
+                <ImageButton
+                    android:id="@+id/colour_btn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="5dp"
+                    android:padding="1dp"
+                    android:scaleType="fitCenter"
+                    android:background="@drawable/button_rounded_rectangle_eden"
+                    android:src="@drawable/ic_brush_settings" />
+
                 <!--settings button-->
                 <ImageButton
                     android:id="@+id/settings_btn"
@@ -89,7 +89,7 @@
                     android:layout_margin="5dp"
                     android:scaleType="fitCenter"
                     android:background="@drawable/button_rounded_rectangle_eden"
-                    android:src="@drawable/ic_brush_settings" />
+                    android:src="@drawable/ic_settings" />
 
             </LinearLayout>
 
@@ -254,24 +254,24 @@
 
             <!--</LinearLayout>-->
 
-        <!--COLOUR SEEK BAR-->
-        <com.xw.repo.BubbleSeekBar
-            android:id="@+id/brush_colour"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            app:bsb_bubble_color="#39796b"
-            app:bsb_max="16777215"
-            app:bsb_min="0"
-            app:bsb_second_track_color="#004d40"
-            app:bsb_section_count="1"
-            app:bsb_show_progress_in_float="false"
-            app:bsb_show_section_mark="false"
-            app:bsb_show_section_text="false"
-            app:bsb_show_thumb_text="false"
-            app:bsb_thumb_radius="15dp"
-            app:bsb_track_color="#39796b" />
+        <!--&lt;!&ndash;COLOUR SEEK BAR&ndash;&gt;-->
+        <!--<com.xw.repo.BubbleSeekBar-->
+            <!--android:id="@+id/brush_colour"-->
+            <!--android:layout_width="350dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_margin="5dp"-->
+            <!--app:bsb_bubble_color="#39796b"-->
+            <!--app:bsb_max="16777215"-->
+            <!--app:bsb_min="0"-->
+            <!--app:bsb_second_track_color="#004d40"-->
+            <!--app:bsb_section_count="1"-->
+            <!--app:bsb_show_progress_in_float="false"-->
+            <!--app:bsb_show_section_mark="false"-->
+            <!--app:bsb_show_section_text="false"-->
+            <!--app:bsb_show_thumb_text="false"-->
+            <!--app:bsb_thumb_radius="15dp"-->
+            <!--app:bsb_track_color="#39796b" />-->
 
 
         <!--</LinearLayout>-->
