--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,6 +99,18 @@
 
             </LinearLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forgot password?"
+                android:id="@+id/tv_forgot_password"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:layout_gravity="end"
+                android:layout_marginBottom="7dp"
+                />
+
             <!--login button-->
             <Button
                 android:layout_width="match_parent"
